--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@react-pdf/renderer": "^3.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,16 +11,26 @@
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "emailjs-com": "^3.2.0",
+    "gsap": "^3.12.5",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.7.0",
     "react-to-pdf": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
