--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
+    "react-fullscreen": "^0.1.0",
+    "react-fullscreen-crossbrowser": "^1.1.3",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -32,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-tailwindcss-datepicker": "^1.7.0",
     "react-to-pdf": "^1.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
